{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 37,
  "lineage": "9cd010f6-99de-6d74-6c16-cf0b025adba4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02481be49e7487e2d",
            "arn": "arn:aws:ec2:ap-southeast-1:948976368048:elastic-ip/eipalloc-02481be49e7487e2d",
            "association_id": "eipassoc-0423db956b50e62ac",
            "domain": "vpc",
            "id": "eipalloc-02481be49e7487e2d",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-05fdb4a420a8ffec9",
            "private_dns": "ip-10-0-3-133.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.133",
            "public_dns": "ec2-3-0-149-248.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.149.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Project": "smartqueue"
            },
            "tags_all": {
              "Project": "smartqueue"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:948976368048:internet-gateway/igw-0ec4b62fc5e1b3c99",
            "id": "igw-0ec4b62fc5e1b3c99",
            "owner_id": "948976368048",
            "tags": {
              "Name": "smartqueue-igw",
              "Project": "smartqueue"
            },
            "tags_all": {
              "Name": "smartqueue-igw",
              "Project": "smartqueue"
            },
            "vpc_id": "vpc-048e0486a84179350"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02481be49e7487e2d",
            "association_id": "eipassoc-0423db956b50e62ac",
            "connectivity_type": "public",
            "id": "nat-041eeb5414d9bcf64",
            "network_interface_id": "eni-05fdb4a420a8ffec9",
            "private_ip": "10.0.3.133",
            "public_ip": "3.0.149.248",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b0965e59474e644a",
            "tags": {
              "Name": "smartqueue-nat",
              "Project": "smartqueue"
            },
            "tags_all": {
              "Name": "smartqueue-nat",
              "Project": "smartqueue"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:948976368048:route-table/rtb-04bdb02c69b231fe8",
            "id": "rtb-04bdb02c69b231fe8",
            "owner_id": "948976368048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-041eeb5414d9bcf64",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "smartqueue-private-rt",
              "Project": "smartqueue"
            },
            "tags_all": {
              "Name": "smartqueue-private-rt",
              "Project": "smartqueue"
            },
            "timeouts": null,
            "vpc_id": "vpc-048e0486a84179350"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:948976368048:route-table/rtb-03855ad5550695900",
            "id": "rtb-03855ad5550695900",
            "owner_id": "948976368048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec4b62fc5e1b3c99",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "smartqueue-public-rt",
              "Project": "smartqueue"
            },
            "tags_all": {
              "Name": "smartqueue-public-rt",
              "Project": "smartqueue"
            },
            "timeouts": null,
            "vpc_id": "vpc-048e0486a84179350"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa295fe4a306cf25",
            "route_table_id": "rtb-04bdb02c69b231fe8",
            "subnet_id": "subnet-0faedb2d3536f31e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa9b6bb2b746b934",
            "route_table_id": "rtb-04bdb02c69b231fe8",
            "subnet_id": "subnet-035173e071910b85e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e960564bced697c",
            "route_table_id": "rtb-03855ad5550695900",
            "subnet_id": "subnet-0b0965e59474e644a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:948976368048:security-group/sg-0da4db2f1691d0548",
            "description": "Lambda functions security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da4db2f1691d0548",
            "ingress": [],
            "name": "smartqueue-lambda-sg",
            "name_prefix": "",
            "owner_id": "948976368048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "smartqueue"
            },
            "tags_all": {
              "Project": "smartqueue"
            },
            "timeouts": null,
            "vpc_id": "vpc-048e0486a84179350"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:948976368048:security-group/sg-0d60ed4034f3f9e83",
            "description": "RDS MySQL security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d60ed4034f3f9e83",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da4db2f1691d0548"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "smartqueue-rds-sg",
            "name_prefix": "",
            "owner_id": "948976368048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "smartqueue"
            },
            "tags_all": {
              "Project": "smartqueue"
            },
            "timeouts": null,
            "vpc_id": "vpc-048e0486a84179350"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:948976368048:subnet/subnet-0faedb2d3536f31e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0faedb2d3536f31e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948976368048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "smartqueue-private-a",
              "Project": "smartqueue"
            },
            "tags_all": {
              "Name": "smartqueue-private-a",
              "Project": "smartqueue"
            },
            "vpc_id": "vpc-048e0486a84179350"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:948976368048:subnet/subnet-035173e071910b85e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035173e071910b85e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948976368048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "smartqueue-private-b",
              "Project": "smartqueue"
            },
            "tags_all": {
              "Name": "smartqueue-private-b",
              "Project": "smartqueue"
            },
            "vpc_id": "vpc-048e0486a84179350"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:948976368048:subnet/subnet-0b0965e59474e644a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0965e59474e644a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948976368048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "smartqueue-public-a",
              "Project": "smartqueue"
            },
            "tags_all": {
              "Name": "smartqueue-public-a",
              "Project": "smartqueue"
            },
            "vpc_id": "vpc-048e0486a84179350"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:948976368048:vpc/vpc-048e0486a84179350",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0976f31443b0d6033",
            "default_route_table_id": "rtb-0848fe5f5c2a1737b",
            "default_security_group_id": "sg-0c5398d1c40520aed",
            "dhcp_options_id": "dopt-0d4994c713516ef95",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048e0486a84179350",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0848fe5f5c2a1737b",
            "owner_id": "948976368048",
            "tags": {
              "Name": "smartqueue-vpc",
              "Project": "smartqueue"
            },
            "tags_all": {
              "Name": "smartqueue-vpc",
              "Project": "smartqueue"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}